--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 
 <body>
   <header class="mlscn-bg-green text-white container-fluid border-bottom mlscn-b-yellow border-4 p-3">
-    <div class="d-flex justify-content-between">
+    <div class="d-flex justify-content-between ">
       <a class="navbar-brand d-flex align-items-center">
         <img src="assets/images/logo.png" class="mlscn-brand-logo" alt="Description" class="image-class">
         <div class="ms-3">
           <h1 class="mlscn-graphit-bold display-6 pb-0 mb-0">MLSCN</h1>
-          <small class="mlscn-graphit mt-0 d-none text-wrap" id="navbarBrandMiniText">Medical Laboratory Science Council of Nigeria</small>
+          <small class="mlscn-graphit mt-0 d-none text-wrap" id="navbarBrandMiniText">Medical Laboratory Science Council
+            of Nigeria</small>
         </div>
       </a>
       <div class="d-flex jusstify-content-between gap-4">
@@ -48,8 +49,7 @@
     </div>
     <nav class="collapse navbar-collapse px-4 py-2 mt-4" id="navbarNavDropdown">
       <div class="container-fluid border-top  border-2  mb-4 p-2 mlscn-b-yellow">
-        <button class="btn float-end" data-bs-toggle="collapse"
-        data-bs-target="#navbarNavDropdown">
+        <button class="btn float-end" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
           <i class="fas fa-times mlscn-graphit-bold fs-1 text-white"></i>
         </button>
       </div>
@@ -65,12 +65,15 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link mlscn-nav-link mlscn-dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
+          <a class="nav-link mlscn-nav-link mlscn-dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+            aria-expanded="false">Dropdown</a>
           <ul class="dropdown-menu ">
             <li><a class="dropdown-item  mlscn-nav-link" href="#">Action</a></li>
             <li><a class="dropdown-item  mlscn-nav-link" href="#">Another action</a></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
-            <li><hr class="dropdown-divider"></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
             <li><a class="dropdown-item" href="#">Separated link</a></li>
           </ul>
         </li>
@@ -86,8 +89,52 @@
       </ul>
     </nav>
   </header>
-  <main>
-
+  <main class="container">
+    <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <!-- <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+      </div> -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/images/carousel-1.jpeg" class="d-block w-100 mlscn-carousel-img" alt="...">
+          <div class="mlscn-carousel-caption d-md-block">
+            <h5 class="mlscn-graphit-bold display-6 ">AMLSN EXCO VISITS MLSCN TO NORMALIZE RELATIONS</h5>
+            <div class="d-flex justify-content-between ">
+              <p><i class="fa-solid fa-calendar-days"></i> 1, Sept 2024</p>
+              <button class="btn btn-primary">News</button>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/images/carousel-2.jpeg" class="d-block w-100 mlscn-carousel-img" alt="...">
+          <div class="mlscn-carousel-caption">
+            <h5 class="mlscn-graphit-bold  display-6">MLSCN TO CONSIDER WEST AFRICAN 
+              POSTGRADUATE COLLEGE OF MEDICAL 
+              LABORATORY SCIENCE’S REQUEST FOR 
+              COLLABORATION</h5>
+              <div class="d-flex justify-content-between ">
+                <p><i class="fa-solid fa-calendar-days"></i> 1, Sept 2024</p>
+                <button class="btn btn-primary">News</button>
+              </div>
+          </div>
+        </div>
+      </div>
+      <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button> -->
+    </div>
   </main>
   <footer>
 
