--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
           <img src="assets/images/logo.png" class="mlscn-brand-logo" alt="Description" class="image-class">
           <div class="ms-3">
             <h1 class="mlscn-graphit-bold display-6 pb-0 mb-0">MLSCN</h1>
-            <small class="mlscn-graphit mt-0 d-none text-wrap" id="navbarBrandMiniText">Medical Laboratory Science Council
+            <small class="mlscn-graphit mt-0 d-none text-wrap" id="navbarBrandMiniText">Medical Laboratory Science
+              Council
               of Nigeria</small>
           </div>
         </a>
@@ -91,51 +92,113 @@
       </nav>
     </div>
   </header>
-  <main class="mt-5 pt-5" >
+  <main class="mt-5 pt-5">
     <div class="container pt-5">
-      <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <!-- <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-            aria-label="Slide 3"></button>
-        </div> -->
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="assets/images/carousel-1.jpeg" class="d-block w-100 mlscn-carousel-img" alt="...">
-            <div class="mlscn-carousel-caption d-md-block">
-              <h5 class="mlscn-graphit-bold display-6 ">AMLSN EXCO VISITS MLSCN TO NORMALIZE RELATIONS</h5>
-              <div class="d-flex justify-content-between ">
-                <p><i class="fa-solid fa-calendar-days"></i> 1, Sept 2024</p>
-                <button class="btn text-white border-4 border-white rounded-4 mlscn-graphit-bold">News</button>
+      <section>
+        <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
+          <!-- <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+          </div> -->
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="assets/images/carousel-1.jpeg" class="d-block w-100 mlscn-carousel-img" alt="...">
+              <div class="mlscn-carousel-caption d-md-block">
+                <h5 class="mlscn-graphit-bold display-6 ">AMLSN EXCO VISITS MLSCN TO NORMALIZE RELATIONS</h5>
+                <div class="d-flex justify-content-between ">
+                  <p><i class="fa-solid fa-calendar-days"></i> 1, Sept 2024</p>
+                  <button class="btn text-white border-4 border-white rounded-4 mlscn-graphit-bold">News</button>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/carousel-2.jpeg" class="d-block w-100 mlscn-carousel-img" alt="...">
+              <div class="mlscn-carousel-caption">
+                <h5 class="mlscn-graphit-bold  display-6">MLSCN TO CONSIDER WEST AFRICAN POSTGRADUATE COLLEGE OF MEDICAL
+                  LABORATORY SCIENCE’S REQUEST FOR COLLABORATION</h5>
+                <div class="d-flex justify-content-between m-2">
+                  <p><i class="fa-solid fa-calendar-days"></i> 1, Sept 2024</p>
+                  <button class="btn text-white border-4 border-white rounded-4 mlscn-graphit-bold">News</button>
+                </div>
               </div>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="assets/images/carousel-2.jpeg" class="d-block w-100 mlscn-carousel-img" alt="...">
-            <div class="mlscn-carousel-caption">
-              <h5 class="mlscn-graphit-bold  display-6">MLSCN TO CONSIDER WEST AFRICAN POSTGRADUATE COLLEGE OF MEDICAL
-                LABORATORY SCIENCE’S REQUEST FOR COLLABORATION</h5>
-              <div class="d-flex justify-content-between m-2">
-                <p><i class="fa-solid fa-calendar-days"></i> 1, Sept 2024</p>
-                <button class="btn text-white border-4 border-white rounded-4 mlscn-graphit-bold">News</button>
+          <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button> -->
+        </div>
+      </section>
+      <section class="mt-4">
+        <div class="row me-1">
+          <div class="col-12 col-md-4 mt-2">
+            <div class="shadow rounded-4">
+              <div class="row">
+                <div class="col-3 d-flex justify-content-center align-items-center">
+                  <div class="ps-3 pe-1">
+                    <img src="assets/images/remita.png" class="w-100" alt="" srcset="">
+                  </div>
+                </div>
+                <div class="col-9 rounded-end py" style="background-color: #F26B35; color:white">
+                  <div class="py-4">
+                    <ul>
+                      <li>Generate Practitioner bills upto 2015</li>
+                      <li>Generate Other Council bill</li>
+                      <li>Pay online or later Bank branches</li>
+                    </ul>
+                    <a class="float-end me-2 mlscn-text-yellow mlscn-graphit-bold mlscn-link" href="#">Click to make payment <i class="fa-solid fa-greater-than ms-2"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 mt-2">
+            <div class="shadow rounded-4 fs-6">
+              <div class="row">
+                <div class="col-3 d-flex justify-content-center align-items-center">
+                  <div class="ps-3 pe-1">
+                    <img src="assets/images/mlscn-hub.png" class="w-100" alt="" srcset="">
+                  </div>
+                </div>
+                <div class="col-9 rounded-end mlscn-bg-green text-white">
+                  <div class="py-4">
+                    <p>Access out IHRIS plaformt to make payments for your bills and download your E-license.</p>
+                    <a class="float-end me-2 mlscn-text-yellow mlscn-graphit-bold mlscn-link" href="#">Click to make payment <i class="fa-solid fa-greater-than ms-2"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 mt-2">
+            <div class="shadow rounded-4 fs-6">
+              <div class="row">
+                <div class="col-3 d-flex justify-content-center align-items-center">
+                  <div class="ps-3 pe-1">
+                    <p class="mlscn-graphit-bold m-0 p-0">MLSCN</p>
+                    <small class="mlscn-graphit-bold mlscn-bg-green rounded text-white py-0 my-0 px-1">EDUPortal</small>
+                  </div>
+                </div>
+                <div class="col-9 rounded-end mlscn-bg-green text-white">
+                  <div class="py-4">
+                   <p>Access our eduportal plaform to index your students and register them for exams</p>
+                    <a class="float-end me-2 mlscn-text-yellow mlscn-graphit-bold mlscn-link" href="#">Click to make payment <i class="fa-solid fa-greater-than ms-2"></i></a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button> -->
-      </div>
+      </section>
     </div>
   </main>
   <footer>
