add more mlscn css classes

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <img src="assets/images/remita.png" class="w-100" alt="" srcset="">
                   </div>
                 </div>
-                <div class="col-9 rounded-end py" style="background-color: #F26B35; color:white">
+                <div class="col-9 rounded-end mlscn-text-xs" style="background-color: #F26B35; color:white">
                   <div class="py-4">
                     <ul>
                       <li>Generate Practitioner bills upto 2015</li>
@@ -170,7 +170,7 @@
                     <img src="assets/images/mlscn-hub.png" class="w-100" alt="" srcset="">
                   </div>
                 </div>
-                <div class="col-9 rounded-end mlscn-bg-green text-white">
+                <div class="col-9 rounded-end mlscn-text-xs mlscn-bg-green text-white">
                   <div class="py-4">
                     <p>Access out IHRIS plaformt to make payments for your bills and download your E-license.</p>
                     <a class="float-end me-2 mlscn-text-yellow mlscn-graphit-bold mlscn-link" href="#">Click to make payment <i class="fa-solid fa-greater-than ms-2"></i></a>
@@ -188,7 +188,7 @@
                     <small class="mlscn-graphit-bold mlscn-bg-green rounded text-white py-0 my-0 px-1">EDUPortal</small>
                   </div>
                 </div>
-                <div class="col-9 rounded-end mlscn-bg-green text-white">
+                <div class="col-9 rounded-end mlscn-text-xs mlscn-bg-green text-white">
                   <div class="py-4">
                    <p>Access our eduportal plaform to index your students and register them for exams</p>
                     <a class="float-end me-2 mlscn-text-yellow mlscn-graphit-bold mlscn-link" href="#">Click to make payment <i class="fa-solid fa-greater-than ms-2"></i></a>
