add news section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="assets//fontawesome-free-6.6.0-web/css/all.min.css">
   <link rel="stylesheet" href="assets/css/mlscn.css">
 
-  <title>MLSCN|Home</title>
+  <title>Home - MLSCN</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
               of Nigeria</small>
           </div>
         </a>
-        <div class="d-flex jusstify-content-between gap-4">
+        <div class="d-flex justify-content-between gap-4">
           <div class="navbar navbar-success m-2" id="navbarTooggleIcon">
             <div class="container-fluid">
               <button class="navbar-toggler mlscn-bg-yellow  button rounded-4" type="button" data-bs-toggle="collapse"
@@ -94,7 +94,9 @@
   </header>
   <main class="mt-5 pt-5">
     <div class="container pt-5">
-      <section>
+
+      <!-- Carousel Section -->
+      <section class="mlscn-section">
         <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
           <!-- <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -139,7 +141,11 @@
           </button> -->
         </div>
       </section>
-      <section class="mt-4">
+
+      <!-- Carousel Section End -->
+
+      <!-- Portal Section -->
+      <section class="mlscn-section">
         <div class="row me-1">
           <div class="col-12 col-md-4 mt-2">
             <div class="shadow rounded-4">
@@ -156,7 +162,8 @@
                       <li>Generate Other Council bill</li>
                       <li>Pay online or later Bank branches</li>
                     </ul>
-                    <a class="float-end me-2 mlscn-text-yellow mlscn-graphit-bold mlscn-link" href="#">Click to make payment <i class="fa-solid fa-greater-than ms-2"></i></a>
+                    <a class="float-end me-2 mlscn-text-yellow mlscn-graphit-bold mlscn-link" href="#">Click to make
+                      payment <i class="fa-solid fa-greater-than ms-2"></i></a>
                   </div>
                 </div>
               </div>
@@ -173,7 +180,8 @@
                 <div class="col-9 rounded-end mlscn-text-xs mlscn-bg-green text-white">
                   <div class="py-4">
                     <p>Access out IHRIS plaformt to make payments for your bills and download your E-license.</p>
-                    <a class="float-end me-2 mlscn-text-yellow mlscn-graphit-bold mlscn-link" href="#">Click to make payment <i class="fa-solid fa-greater-than ms-2"></i></a>
+                    <a class="float-end me-2 mlscn-text-yellow mlscn-graphit-bold mlscn-link" href="#">Click to make
+                      payment <i class="fa-solid fa-greater-than ms-2"></i></a>
                   </div>
                 </div>
               </div>
@@ -190,8 +198,9 @@
                 </div>
                 <div class="col-9 rounded-end mlscn-text-xs mlscn-bg-green text-white">
                   <div class="py-4">
-                   <p>Access our eduportal plaform to index your students and register them for exams</p>
-                    <a class="float-end me-2 mlscn-text-yellow mlscn-graphit-bold mlscn-link" href="#">Click to make payment <i class="fa-solid fa-greater-than ms-2"></i></a>
+                    <p>Access our eduportal plaform to index your students and register them for exams</p>
+                    <a class="float-end me-2 mlscn-text-yellow mlscn-graphit-bold mlscn-link" href="#">Click to make
+                      payment <i class="fa-solid fa-greater-than ms-2"></i></a>
                   </div>
                 </div>
               </div>
@@ -199,6 +208,111 @@
           </div>
         </div>
       </section>
+      <!-- Portal Section End -->
+
+      <!-- News Section -->
+      <section class="mlscn-section">
+        <div class="d-flex justify-content-between mb-2 border-bottom border-success ">
+          <h6 class="mlscn-graphit-bold mlscn-text-green fs-4">News</h6>
+          <a href="#" class="fs-5 mlscn-text-green mlscn-link" >See more  <i class="fa-solid fa-greater-than"></i></a>
+        </div>
+        <div class="row gy-4">
+          <div class="col-12 col-sm-6 col-md-4">
+            <div class="card rounded-0 rounded-bottom">
+              <img src="assets/images/news-1.jpeg" class="card-img-top" alt="...">
+              <div class="card-body mlscn-news-card-body">
+                <h5 class="card-title mlscn-graphit-bold mlscn-text-green mlscn-text-md">NATIONAL BLOOD SERVICE
+                  COMMISSION
+                  SEEKS COLLABORATION WITH MLSCN</h5>
+                <div class="d-flex justify-content-between">
+                  <p class="text-muted mlscn-text-xs"><i class="fa-solid fa-calendar-days"></i> 1, Sept 2024 | <i
+                      class="fa-solid fa-clock"></i> 5 mins</p>
+                </div>
+                <p class="card-text mlscn-text-sm">The Acting Director General of the newly established National Blood
+                  Service Commission (NBSC), Dr E.J. Suberu, earlier today, led his Management Team on courtesy visit to
+                  the Medical Laboratory Science Council of Nigeria (MLSCN).</p>
+
+                <div class="btn-toolbar mt-4" role="toolbar" aria-label="Toolbar with button groups">
+                  <div class="btn-group me-2" role="group" aria-label="First group">
+                    <button type="button"
+                      class="btn btn-sm btn-light mlscn-b-green mlscn-text-green rounded-4 px-4">Feature</button>
+                  </div>
+                  <div class="btn-group me-2" role="group" aria-label="Second group">
+                    <button type="button"
+                      class="btn btn-sm btn-light mlscn-b-green mlscn-text-green rounded-4 px-4">News</button>
+                  </div>
+                </div>
+
+              </div>
+
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4">
+            <div class="card rounded-0 rounded-bottom">
+              <img src="assets/images/news-2.jpeg" class="card-img-top" alt="...">
+              <div class="card-body mlscn-news-card-body">
+                <h5 class="card-title mlscn-graphit-bold mlscn-text-green mlscn-text-md">REGISTRAR REITERATES COMITMENT
+                  TO
+                  MALARIA ERADICATION, AS MLSCN
+                  APPOINTS MALARIA MICROSCOPY
+                  AMBASSADOR</h5>
+                <div class="d-flex justify-content-between">
+                  <p class="text-muted mlscn-text-xs"><i class="fa-solid fa-calendar-days"></i> 1, Sept 2024 | <i
+                      class="fa-solid fa-clock"></i> 5 mins</p>
+                </div>
+                <p class="card-text mlscn-text-sm">
+                  The Registrar/CEO, Dr Tosan Erhbaor has announced the appointment of Ms Ndidiamaka Okafor, a Cross
+                  River State-based Medical Laboratory Scientist,
+                </p>
+                <div class="btn-toolbar mt-4" role="toolbar" aria-label="Toolbar with button groups">
+                  <div class="btn-group me-2" role="group" aria-label="First group">
+                    <button type="button"
+                      class="btn btn-sm btn-light mlscn-b-green mlscn-text-green rounded-4 px-4">Feature</button>
+                  </div>
+                  <div class="btn-group me-2" role="group" aria-label="Second group">
+                    <button type="button"
+                      class="btn btn-sm btn-light mlscn-b-green mlscn-text-green rounded-4 px-4">News</button>
+                  </div>
+                </div>
+
+              </div>
+
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4">
+            <div class="card rounded-0 rounded-bottom">
+              <img src="assets/images/news-3.jpeg" class="card-img-top" alt="...">
+              <div class="card-body mlscn-news-card-body">
+                <h5 class="card-title mlscn-graphit-bold mlscn-text-green mlscn-text-md">NATIONAL SALARIES AND WAGES
+                  COMMISSION VISITS MLSCN FOR JOB
+                  EVALUATION SURVEY.</h5>
+                <div class="d-flex justify-content-between">
+                  <p class="text-muted mlscn-text-xs"><i class="fa-solid fa-calendar-days"></i> 1, Sept 2024 | <i
+                      class="fa-solid fa-clock"></i> 5 mins</p>
+                </div>
+                <p class="card-text mlscn-text-sm">
+                  As part of a survey of jobs in the federal public health sector to identify compensable factors for
+                  job evaluation schemes for the sector, the National Salaries, Income and Wages Commission visited the
+                  Medical Laboratory Science Council of Nigeria headquarters in Abuja </p>
+
+                <div class="btn-toolbar mt-4" role="toolbar" aria-label="Toolbar with button groups">
+                  <div class="btn-group me-2" role="group" aria-label="First group">
+                    <button type="button"
+                      class="btn btn-sm btn-light mlscn-b-green mlscn-text-green rounded-4 px-4">Feature</button>
+                  </div>
+                  <div class="btn-group me-2" role="group" aria-label="Second group">
+                    <button type="button"
+                      class="btn btn-sm btn-light mlscn-b-green mlscn-text-green rounded-4 px-4">News</button>
+                  </div>
+                </div>
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- News Section End -->
     </div>
   </main>
   <footer>
