--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="container pt-5">
 
       <!-- Carousel Section -->
-      <section class="mlscn-section">
+      <section>
         <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
           <!-- <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
