update covid19 section

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       <section class="mlscn-section">
         <div class="d-flex justify-content-between mb-2 border-bottom border-success ">
           <h6 class="mlscn-graphit-bold mlscn-text-green fs-4">News</h6>
-          <a href="#" class="fs-5 mlscn-text-green mlscn-link" >See more  <i class="fa-solid fa-greater-than"></i></a>
+          <a href="#" class="fs-5 mlscn-text-green mlscn-link">See more <i class="fa-solid fa-greater-than"></i></a>
         </div>
         <div class="row gy-4">
           <div class="col-12 col-sm-6 col-md-4">
@@ -314,9 +314,31 @@
       </section>
       <!-- News Section End -->
 
-       <!-- Covid19 Section -->
-       <section class="mlscn-section">
-          <h1 class="mlscn-graphit-bold mlscn-text-light-green text-center">Requirements for COVID-19 IVD Validation</h1>
+      <!-- Covid19  Section -->
+      <section class="mlscn-section">
+        <h1 class="mlscn-graphit-bold mlscn-text-light-green text-center">Requirements for COVID-19 IVD Validation</h1>
+        <div id="covid19WBI" class="p-4 mlscn-bg-green text-white rounded-4">
+          <ul>
+            <li>You are to submit 300 worth of test kits for the validation exercise and pay requisite validation fees,
+              via the Remita platform on our website: <a href="www.mlscn.gov.ng"  class="mlscn-link text-white"><strong>www.mlscn.gov.ng</strong></a>
+
+            <li>To make payment, select ‘Public Medical Laboratory’ and describe payment as ‘Payment for Covid 19
+              Validation.</li>
+
+            <li>For company registration, please fill the attached form for each company and attach all necessary
+              documents with the relevant payment.
+               We will be glad to provide any further support to you and your team in the fight against this pandemic.</li>
+            </ul>
+
+              Below are applicable documentation for your use in the requesting of validation for your COVID-19 IVDs.
+            <ul>
+              <li>IVD Company Registration Form</li>
+              <li>Product listing file / dossier document submission requirements</li>
+            </ul>
+
+              For further clarifications/ Enquiries, please contact us via email – <a href="mailto:poffutalu@mlscn.gov.ng" class="mlscn-link text-white"><strong>poffutalu@mlscn.gov.ng</strong></a>
+
+        </div>
       </section>
       <!-- Covid19 Section End -->
     </div>
