update covid19 bg image

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
       <!-- Covid19  Section -->
       <section class="mlscn-section">
         <h1 class="mlscn-graphit-bold mlscn-text-light-green text-center">Requirements for COVID-19 IVD Validation</h1>
-        <div id="covid19WBI" class="p-4 mlscn-bg-green text-white rounded-4">
+        <div  class="p-4 mlscn-bg-green text-white rounded-4 bg-image-logo">
           <ul>
             <li>You are to submit 300 worth of test kits for the validation exercise and pay requisite validation fees,
               via the Remita platform on our website: <a href="www.mlscn.gov.ng"  class="mlscn-link text-white"><strong>www.mlscn.gov.ng</strong></a>
@@ -327,7 +327,7 @@
 
             <li>For company registration, please fill the attached form for each company and attach all necessary
               documents with the relevant payment.
-               We will be glad to provide any further support to you and your team in the fight against this pandemic.</li>
+              We will be glad to provide any further support to you and your team in the fight against this pandemic.</li>
             </ul>
 
               Below are applicable documentation for your use in the requesting of validation for your COVID-19 IVDs.
