added footer and news page

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </nav>
     </div>
   </header>
-  <main class="mt-5 pt-5">
+  <main class="mt-5 pt-5 mb-5">
     <div class="container pt-5">
 
       <!-- Carousel Section -->
@@ -317,7 +317,7 @@
       <!-- Covid19  Section -->
       <section class="mlscn-section">
         <h1 class="mlscn-graphit-bold mlscn-text-light-green text-center">Requirements for COVID-19 IVD Validation</h1>
-        <div  class="p-4 mlscn-bg-green text-white rounded-4 bg-image-logo">
+        <div  class="p-4 mlscn-green-gradient text-white rounded-4 bg-image-logo">
           <ul>
             <li>You are to submit 300 worth of test kits for the validation exercise and pay requisite validation fees,
               via the Remita platform on our website: <a href="www.mlscn.gov.ng"  class="mlscn-link text-white"><strong>www.mlscn.gov.ng</strong></a>
@@ -342,10 +342,178 @@
       </section>
       <!-- Covid19 Section End -->
     </div>
+    <!-- ARTICLE SECTION -->
+    <section class="container mlscn-article-section">
+      <div class="d-flex justify-content-between article-margin">
+        <p class="mlscn-article--para">Articles</p>
+        <div>
+          <a href="" class="mlscn-article--link">See more articles</a>
+          <img src="./assets/images/icon _angle-right.svg" alt="" srcset="">
+        </div>
+      </div>
+      <hr class="mlscn-light-green">
+      <!-- ARTICLE CARD -->
+      <div class="row row-cols-2 row-cols-md-4 gy-4 gx-2">
+        <div class="col">
+          <div class="card mlscn-article--card">
+            <div class="card-body">
+              <h5 class="mlscn-card--title">MLSCN <br> November 2023  Newsletter has been published</h5>
+                <div class="d-flex align-items-center align-content-center">
+                    <img src="./assets//images/icon _calendar.svg" class="me-1" alt="calendar icon">
+                  <p class="mlscn-card--text pt-3">05, November 2023</p>
+                </div>
+            </div>
+            <div class="card-footer mlscn-card-footer">
+              <small class="mlscn-light-green">Download Here</small>
+              <img src="./assets/images/icon _download.svg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card mlscn-article--card">
+            <div class="card-body">
+              <h5 class="mlscn-card--title">MLSCN <br>
+                November 2023 
+                Newsletter has 
+                been published</h5>
+                <div class="d-flex align-items-center align-content-center">
+                  <img src="./assets//images/icon _calendar.svg" class="me-1" alt="calendar icon">
+                <p class="mlscn-card--text pt-3">05, November 2023</p>
+              </div>
+            </div>
+            <div class="card-footer mlscn-card-footer">
+              <small class="mlscn-light-green">Download Here</small>
+              <img src="./assets/images/icon _download.svg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card mlscn-article--card">
+            <div class="card-body">
+              <h5 class="mlscn-card--title">MLSCN <br>
+                November 2023 
+                Newsletter has 
+                been published</h5>
+                <div class="d-flex align-items-center align-content-center">
+                  <img src="./assets//images/icon _calendar.svg" class="me-1" alt="calendar icon">
+                <p class="mlscn-card--text pt-3">05, November 2023</p>
+              </div>
+            </div>
+            <div class="card-footer mlscn-card-footer">
+              <small class="">Download Here</small>
+              <img src="./assets/images/icon _download.svg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card mlscn-article--card">
+            <div class="card-body">
+              <h5 class="mlscn-card--title">MLSCN <br>
+                November 2023 
+                Newsletter has 
+                been published</h5>
+                <div class="d-flex align-items-center align-content-center">
+                  <img src="./assets//images/icon _calendar.svg" class="me-1" alt="calendar icon">
+                <p class="mlscn-card--text pt-3">05, November 2023</p>
+              </div>
+            </div>
+            <div class="card-footer mlscn-card-footer">
+              <small class="">Download Here</small>
+              <img src="./assets/images/icon _download.svg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card mlscn-article--card">
+            <div class="card-body">
+              <h5 class="mlscn-card--title">MLSCN <br>
+                November 2023 
+                Newsletter has 
+                been published</h5>
+                <div class="d-flex align-items-center align-content-center">
+                  <img src="./assets//images/icon _calendar.svg" class="me-1" alt="calendar icon">
+                <p class="mlscn-card--text pt-3">05, November 2023</p>
+              </div>
+            </div>
+            <div class="card-footer mlscn-card-footer">
+              <small class="">Download Here</small>
+              <img src="./assets/images/icon _download.svg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- ARTICLE CARD -->
+    </section>
+    <!-- ARTICLE SECTION -->
+    <!-- DISCLAIMER SECTION -->
+    <div class="container mlscn-disclaimer--section">
+      <div class="mlscn-disclaimer--container">
+        <div class="">
+          <div class="mlscn-disclaimer--card">
+            <p class="mlscn-disclaimer--para">Disclaimer</p>
+          </div>
+          <p class="mlscn-article--para2 mt-2">It has come to the attention of the Medical Laboratory Science Council of Nigeria that 
+            some individuals posing as staff of Council have adopted for 
+            use fake Council email addresses and fake letterheads 
+            (which may be close to but different from the original) 
+            to put forward request for invitations to various international conferences. 
+            The ultimate aim of these individuals is to secure 
+            unmerited visas with which to travel out of Nigeria 
+            even if it means denting the hard earned reputation of Council. 
+            The Medical Laboratory Science Council of Nigeria hereby notifies the public particularly the international community that these individuals are not bonafide staff of the Council and all such requests are fake and do not originate from Council. Any person who has any inquiry to make about such requests should contact Council via its authentic email address – info@mlscn.gov.ng Anyone who carries out any transaction with any of these imposters and fraudsters does so at his/her own risk. BE WARNED!</p>
+            <div class="mb-2" style="border: 2px solid #418301; width: 338px !important;"></div>
+        </div>
+        <div>
+          <div class="mlscn-disclaimer-black--card">
+            <p class="mlscn-disclaimer-y--para">Notice Board</p>
+          </div>
+          <div class="mlscn-disclaimer-green--card mt-1">
+            <ul class="">
+              <li class="ps-2 text-white">
+                <a href="" class="text-white">Information for MLS Foreign graduates</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      </div>
+      <!-- DISCLAIMER SECTION -->
+    
   </main>
-  <footer>
-
+  <!-- FOOTER -->
+  <footer class="mlscn-footer">
+     <div class="d-flex justify-content-between align-items-center">
+         <div class="mlscn-footer--left">
+          <img src="./assets/images/logo.png" alt="" class="mlscn-brand-logo--footer">
+          <div>
+            <p class="mlscn-footer--para">Copyright © 2024 <br>
+              Medical Laboratory Science Council of Nigeria.<br> 
+              All rights reserved.</p>
+          </div>
+         </div>
+         <div class="mlscn-footer--right">
+         <p class="mlscn-footer--para2">Useful Links</p>
+         <ul>
+          <li class="mb-3">
+            <a href="">MLSCN Mandate</a>
+          </li>
+          <li class="mb-3">
+            <a href="">MLSCN History</a>
+          </li>
+          <li class="mb-3">
+            <a href="">MLSCN Approved Documents</a>
+          </li>
+          <li class="mb-3">
+            <a href="">MLSCN Webmail</a>
+          </li>
+          <li>
+            <a href="">Up-to-date MLS Practitioners' Register</a>
+          </li>
+         </ul>
+         </div>
+     </div>
   </footer>
+  <!-- FOOTER -->
   <script src="assets/bootstrap-5.2.3/js/bootstrap.bundle.min.js"></script>
   <script src="assets/fontawesome-free-6.6.0-web/js/all.min.js"></script>
   <script src="assets/plugins/jquery/jquery-3.7.1.min.js"></script>
