--- a/mlscn-gov-body.html
+++ b/mlscn-gov-body.html
@@ -101,7 +101,7 @@
     </div>
    <div class="container mt-4 pt-4 mt-md-5 pt-md-5 pb-5">
     <!-- GOV BOARD TABLE -->
-    <div class="table-responsive">
+    <div class="table-responsive d-flex justify-content-center">
       <table class="table table-stripe  text-center">
         <thead>
             <tr class="mlscn-news-govb__tr">
