--- a/mlscn-management-team.html
+++ b/mlscn-management-team.html
@@ -230,40 +230,38 @@
     <!-- Management Team -->
    </div>    
   </main>
-  <!-- FOOTER -->
-  <footer class="mlscn-footer">
-     <div class="d-flex justify-content-between align-items-center">
-         <div class="mlscn-footer--left">
-          <img src="./assets/images/logo.png" alt="" class="mlscn-brand-logo--footer">
-          <div>
-            <p class="mlscn-footer--para">Copyright © 2024 <br>
-              Medical Laboratory Science Council of Nigeria.<br> 
-              All rights reserved.</p>
-          </div>
-         </div>
-         <div class="mlscn-footer--right">
-         <p class="mlscn-footer--para2">Useful Links</p>
-         <ul>
-          <li class="mb-3">
-            <a href="">MLSCN Mandate</a>
+  <footer class="mlscn-bg-green text-white  mlscn-green-gradient" >
+    <div class="d-flex flex-column flex-md-row justify-content-center align-items-center align-items-md-stretch justify-content-md-around py-5">
+      <div class="">
+        <img src="./assets/images/logo.png" alt="" style="width: 80px;">
+        <div>
+          <p class="">Copyright © 2024 <br>
+            Medical Laboratory Science Council of Nigeria.<br>
+            All rights reserved.</p>
+        </div>
+      </div>
+      <div class="">
+        <p class="fs-4 mlscn-graphit-bold mlscn-text-yellow">USEFUL LINKS</p>
+        <ul class="navbar-nav" style="list-style: disc;">
+          <li class="nav-item">
+            <a href="" class="nav-link ">MLSCN Mandate</a>
           </li>
-          <li class="mb-3">
-            <a href="">MLSCN History</a>
+          <li class="nav-item">
+            <a href="" class="nav-link ">MLSCN History</a>
           </li>
-          <li class="mb-3">
-            <a href="">MLSCN Approved Documents</a>
+          <li class="nav-item">
+            <a href="" class="nav-link ">MLSCN Approved Documents</a>
           </li>
-          <li class="mb-3">
-            <a href="">MLSCN Webmail</a>
+          <li class="nav-item">
+            <a href="" class="nav-link ">MLSCN Webmail</a>
           </li>
-          <li>
-            <a href="">Up-to-date MLS Practitioners' Register</a>
+          <li class="nav-item">
+            <a href="" class="nav-link ">Up-to-date MLS Practitioners' Register</a>
           </li>
-         </ul>
-         </div>
-     </div>
-  </footer>
-  <!-- FOOTER -->
+        </ul>
+      </div>
+    </div>
+</footer>
   <script src="assets/bootstrap-5.2.3/js/bootstrap.bundle.min.js"></script>
   <script src="assets/fontawesome-free-6.6.0-web/js/all.min.js"></script>
   <script src="assets/plugins/jquery/jquery-3.7.1.min.js"></script>
