--- a/news-body.html
+++ b/news-body.html
@@ -127,46 +127,44 @@
       <!-- IMAGE CONTAINER -->
        <!-- NEWS BODY PARA -->
         <div class="mt-4 mt-md-5">
-          <p class="mlscn-news-body__para">The Registrar/CEO, Dr Tosan Erhbaor has announced the appointment of Ms Ndidiamaka Okafor, a Cross River State-based Medical Laboratory Scientist, as MLSCN Ambassador on Malaria Microscopy. This was contained in the Registrar’s remarks in Abuja, on Monday, July 31, 2023, while receiving Okafor from Kenya where MLSCN had sponsored her for further exposure on malaria microscopy. He also reiterated MLSCN’s commitment towards the eradication of malaria in the country. Erhabor justified the beneficiary’s selection as purely based on merit, adding that she had no relationship with the Council’s management, but benefitted from the Council’s commitment towards the eradication of malaria in the country. “Driven by such a commitment, the management had promised to sponsor to Nairobi, Kenya, any participant that achieved Level Oneatthe National Competency Assessment on Malaria Microscopy (NCAMM). Okafor emerged the sole winner of the prize and was supposed to travel to Kenya last year, but that did not work out. This year, our efforts to sponsor her yielded the desired results and we received the approval of the Federal Ministry of Health,” he said. Moreover, he encouraged other stakeholders to involve the MLSCN Ambassador and others in their malaria microscopy programs to enable the country to build adequate capacity to combat the scourge of malaria. Furthermore, the Registrar assured the Malaria Microscopist Ambassador of the Council’s desire to continue to work with her and urged her to henceforth see herself as representing MLSCN at any official function on malaria microscopy. He also promised to formally present her to the next Minister of Health when appointed. Responding, Okafor expressed gratitude to the Council for the support given to her so far, which she said was totally unexpected and placed no demand on her. “I’m indeed grateful for the opportunity. You offered me support to travel to Kenya to get further exposure on malaria microscopy, which turned out to be quite revealing. Let me also assure you that your support has increased my passion for malaria microscopy, and the exposure I gained will surely help my work on malaria microscopy. Working with MLSCN to help eradicate malaria is a lifetime opportunity, which I would never take for granted,” she said.</p>
+          <p class="mlscn-news-body__para">The Registrar/CEO, Dr Tosan Erhbaor has announced the appointment of Ms Ndidiamaka Okafor, a Cross River State-based Medical Laboratory Scientist, as MLSCN Ambassador on Malaria Microscopy. This was contained in the Registrar’s remarks in Abuja, on Monday, July 31, 2023, while receiving Okafor from Kenya where MLSCN had sponsored her for further exposure on malaria microscopy. He also reiterated MLSCN’s commitment towards the eradication of malaria in the country.Erhabor justified the beneficiary’s selection as purely based on merit, adding that she had no relationship with the Council’s management, but benefitted from the Council’s commitment towards the eradication of malaria in the country. “Driven by such a commitment, the management had promised to sponsor to Nairobi, Kenya, any participant that achieved Level Oneatthe National Competency Assessment on Malaria Microscopy (NCAMM). Okafor emerged the sole winner of the prize and was supposed to travel to Kenya last year, but that did not work out. This year, our efforts to sponsor her yielded the desired results and we received the approval of the Federal Ministry of Health,” he said. Moreover, he encouraged other stakeholders to involve the MLSCN Ambassador and others in their malaria microscopy programs to enable the country to build adequate capacity to combat the scourge of malaria. Furthermore, the Registrar assured the Malaria Microscopist Ambassador of the Council’s desire to continue to work with her and urged her to henceforth see herself as representing MLSCN at any official function on malaria microscopy. He also promised to formally present her to the next Minister of Health when appointed.Responding, Okafor expressed gratitude to the Council for the support given to her so far, which she said was totally unexpected and placed no demand on her. “I’m indeed grateful for the opportunity. You offered me support to travel to Kenya to get further exposure on malaria microscopy, which turned out to be quite revealing. Let me also assure you that your support has increased my passion for malaria microscopy, and the exposure I gained will surely help my work on malaria microscopy. Working with MLSCN to help eradicate malaria is a lifetime opportunity, which I would never take for granted,” she said.</p>
         </div>
        <!-- NEWS BODY PARA -->
     </div>
    </div>    
   </main>
-  <!-- FOOTER -->
-  <footer class="mlscn-footer">
-     <div class="d-flex justify-content-between align-items-center">
-         <div class="mlscn-footer--left">
-          <img src="./assets/images/logo.png" alt="" class="mlscn-brand-logo--footer">
-          <div>
-            <p class="mlscn-footer--para">Copyright © 2024 <br>
-              Medical Laboratory Science Council of Nigeria.<br> 
-              All rights reserved.</p>
-          </div>
-         </div>
-         <div class="mlscn-footer--right">
-         <p class="mlscn-footer--para2">Useful Links</p>
-         <ul>
-          <li class="mb-3">
-            <a href="">MLSCN Mandate</a>
+  <footer class="mlscn-bg-green text-white  mlscn-green-gradient" >
+    <div class="d-flex flex-column flex-md-row justify-content-center align-items-center align-items-md-stretch justify-content-md-around py-5">
+      <div class="">
+        <img src="./assets/images/logo.png" alt="" style="width: 80px;">
+        <div>
+          <p class="">Copyright © 2024 <br>
+            Medical Laboratory Science Council of Nigeria.<br>
+            All rights reserved.</p>
+        </div>
+      </div>
+      <div class="">
+        <p class="fs-4 mlscn-graphit-bold mlscn-text-yellow">USEFUL LINKS</p>
+        <ul class="navbar-nav" style="list-style: disc;">
+          <li class="nav-item">
+            <a href="" class="nav-link ">MLSCN Mandate</a>
           </li>
-          <li class="mb-3">
-            <a href="">MLSCN History</a>
+          <li class="nav-item">
+            <a href="" class="nav-link ">MLSCN History</a>
           </li>
-          <li class="mb-3">
-            <a href="">MLSCN Approved Documents</a>
+          <li class="nav-item">
+            <a href="" class="nav-link ">MLSCN Approved Documents</a>
           </li>
-          <li class="mb-3">
-            <a href="">MLSCN Webmail</a>
+          <li class="nav-item">
+            <a href="" class="nav-link ">MLSCN Webmail</a>
           </li>
-          <li>
-            <a href="">Up-to-date MLS Practitioners' Register</a>
+          <li class="nav-item">
+            <a href="" class="nav-link ">Up-to-date MLS Practitioners' Register</a>
           </li>
-         </ul>
-         </div>
-     </div>
-  </footer>
-  <!-- FOOTER -->
+        </ul>
+      </div>
+    </div>
+</footer>
   <script src="assets/bootstrap-5.2.3/js/bootstrap.bundle.min.js"></script>
   <script src="assets/fontawesome-free-6.6.0-web/js/all.min.js"></script>
   <script src="assets/plugins/jquery/jquery-3.7.1.min.js"></script>
