--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
                 <h5 class="mlscn-graphit-bold display-6 ">AMLSN EXCO VISITS MLSCN TO NORMALIZE RELATIONS</h5>
                 <div class="d-flex justify-content-between ">
                   <p><i class="fa-solid fa-calendar-days"></i> 1, Sept 2024</p>
-                  <button class="btn text-white border-4 border-white rounded-4 mlscn-graphit-bold">News</button>
+                  <a href="news-body.html" class="btn text-white border-4 border-white rounded-4 mlscn-graphit-bold"
+                    role="button">
+                    News
+                  </a>
                 </div>
               </div>
             </div>
@@ -124,7 +127,10 @@
                   LABORATORY SCIENCE’S REQUEST FOR COLLABORATION</h5>
                 <div class="d-flex justify-content-between m-2">
                   <p><i class="fa-solid fa-calendar-days"></i> 1, Sept 2024</p>
-                  <button class="btn text-white border-4 border-white rounded-4 mlscn-graphit-bold">News</button>
+                  <a href="news-body.html" class="btn text-white border-4 border-white rounded-4 mlscn-graphit-bold"
+                    role="button">
+                    News
+                  </a>
                 </div>
               </div>
             </div>
@@ -147,7 +153,7 @@
       <!-- Portal SECTION -->
       <section class="mlscn-section">
         <div class="row me-1">
-          <div class="col-12 col-md-4 mt-2">
+          <div class="col-12 col-md-6 col-lg-12 mt-2">
             <div class="shadow rounded-4">
               <div class="row">
                 <div class="col-3 d-flex justify-content-center align-items-center">
@@ -169,7 +175,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4 mt-2">
+          <div class="col-12 col-md-6 col-lg-12 mt-2">
             <div class="shadow rounded-4 fs-6">
               <div class="row">
                 <div class="col-3 d-flex justify-content-center align-items-center">
@@ -187,7 +193,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4 mt-2">
+          <div class="col-12 col-md-6 col-lg-12 mt-2">
             <div class="shadow rounded-4 fs-6">
               <div class="row">
                 <div class="col-3 d-flex justify-content-center align-items-center">
@@ -214,7 +220,7 @@
       <section class="mlscn-section">
         <div class="d-flex justify-content-between mb-2 border-bottom border-success ">
           <h6 class="mlscn-graphit-bold mlscn-text-green fs-4">News</h6>
-          <a href="#" class="fs-5 mlscn-text-green mlscn-link">See more <i class="fa-solid fa-greater-than"></i></a>
+          <a href="news.html" class="fs-5 mlscn-text-green mlscn-link">See more <i class="fa-solid fa-greater-than"></i></a>
         </div>
         <div class="row gy-4">
           <div class="col-12 col-sm-6 col-md-4">
@@ -396,7 +402,7 @@
                 <i class="fa-solid fa-download"></i>
               </div>
             </div>
-          </div>          
+          </div>
 
         </div>
       </section>
@@ -404,18 +410,28 @@
 
       <!-- DISCLAIMER SECTION -->
       <section class="mlscn-section">
-        <div class="d-flex flex-column flex-md-row justify-content-center align-items-center align-items-md-stretch justify-content-md-between gap-4">
-          <div class="mlscn-disclaimer-card" id="imlscnDisclaminer" >
-              <h4 class="mlscn-disclaimer-header bg-secondary text-black">Disclaimer</h4>
-              <div class="mlscn-disclaimer-body">
-                <p class="mlscn-text-justify">It has come to the attention of the Medical Laboratory Science Council of Nigeria that some individuals posing as staff of Council have adopted for use fake Council email addresses and fake letterheads (which may be close to but different from the original) to put forward request for invitations to various international conferences. The ultimate aim of these individuals is to secure unmerited visas with which to travel out of Nigeria even if it means denting the hard earned reputation of Council.
-                  The Medical Laboratory Science Council of Nigeria hereby notifies the public particularly the international community that these individuals are not bonafide staff of the Council and all such requests are fake and do not originate from Council. Any person who has any inquiry to make about such requests should contact Council via its authentic email address – info@mlscn.gov.ng
-                  Anyone who carries out any transaction with any of these imposters and fraudsters does so at his/her own risk. BE WARNED!</p>
-              </div>
-              <div class="mb-2" style="border: 2px solid #418301; width: 338px !important;"></div>
-              
+        <div
+          class="d-flex flex-column flex-md-row justify-content-center align-items-center align-items-md-stretch justify-content-md-between gap-4">
+          <div class="mlscn-disclaimer-card" id="imlscnDisclaminer">
+            <h4 class="mlscn-disclaimer-header bg-secondary text-black">Disclaimer</h4>
+            <div class="mlscn-disclaimer-body">
+              <p class="mlscn-text-justify">It has come to the attention of the Medical Laboratory Science Council of
+                Nigeria that some individuals posing as staff of Council have adopted for use fake Council email
+                addresses and fake letterheads (which may be close to but different from the original) to put forward
+                request for invitations to various international conferences. The ultimate aim of these individuals is
+                to secure unmerited visas with which to travel out of Nigeria even if it means denting the hard earned
+                reputation of Council.
+                The Medical Laboratory Science Council of Nigeria hereby notifies the public particularly the
+                international community that these individuals are not bonafide staff of the Council and all such
+                requests are fake and do not originate from Council. Any person who has any inquiry to make about such
+                requests should contact Council via its authentic email address – info@mlscn.gov.ng
+                Anyone who carries out any transaction with any of these imposters and fraudsters does so at his/her own
+                risk. BE WARNED!</p>
+            </div>
+            <div class="mb-2" style="border: 2px solid #418301; width: 338px !important;"></div>
+
           </div>
-          <div class="mlscn-disclaimer-card" id="imlscnNoticeBoard" >
+          <div class="mlscn-disclaimer-card" id="imlscnNoticeBoard">
             <h4 class="mlscn-disclaimer-header bg-black mlscn-text-yellow text-center">Notice Board</h4>
             <div class="mlscn-green-gradient text-white mlscn-disclaimer-body py-4 px-2">
               <ul>
@@ -428,39 +444,40 @@
       <!-- DISCLAIMER SECTION END -->
     </div>
   </main>
-  <footer class="mlscn-bg-green text-white  mlscn-green-gradient" >
-      <div class="d-flex flex-column flex-md-row justify-content-center align-items-center align-items-md-stretch justify-content-md-around py-5">
-        <div class="">
-          <img src="./assets/images/logo.png" alt="" style="width: 80px;">
-          <div>
-            <p class="">Copyright © 2024 <br>
-              Medical Laboratory Science Council of Nigeria.<br>
-              All rights reserved.</p>
-          </div>
-        </div>
-        <div class="">
-          <p class="fs-4 mlscn-graphit-bold mlscn-text-yellow">USEFUL LINKS</p>
-          <ul class="navbar-nav" style="list-style: disc;">
-            <li class="nav-item">
-              <a href="" class="nav-link ">MLSCN Mandate</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link ">MLSCN History</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link ">MLSCN Approved Documents</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link ">MLSCN Webmail</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link ">Up-to-date MLS Practitioners' Register</a>
-            </li>
-          </ul>
+  <footer class="mlscn-bg-green text-white  mlscn-green-gradient">
+    <div
+      class="d-flex flex-column flex-md-row justify-content-center align-items-center align-items-md-stretch justify-content-md-around py-5">
+      <div class="">
+        <img src="./assets/images/logo.png" alt="" style="width: 80px;">
+        <div>
+          <p class="">Copyright © 2024 <br>
+            Medical Laboratory Science Council of Nigeria.<br>
+            All rights reserved.</p>
         </div>
       </div>
+      <div class="">
+        <p class="fs-4 mlscn-graphit-bold mlscn-text-yellow">USEFUL LINKS</p>
+        <ul class="navbar-nav" style="list-style: disc;">
+          <li class="nav-item">
+            <a href="" class="nav-link ">MLSCN Mandate</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link ">MLSCN History</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link ">MLSCN Approved Documents</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link ">MLSCN Webmail</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link ">Up-to-date MLS Practitioners' Register</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </footer>
- 
+
   <script src="assets/bootstrap-5.2.3/js/bootstrap.bundle.min.js"></script>
   <script src="assets/fontawesome-free-6.6.0-web/js/all.min.js"></script>
   <script src="assets/plugins/jquery/jquery-3.7.1.min.js"></script>
