--- a/mlscn-internship.html
+++ b/mlscn-internship.html
@@ -103,7 +103,7 @@
     <!-- MLSCN APPROVED INTERNSHIP -->
     <nav class="navbar mt-1 mlscn-intern-navbar__bg">
       <div class="container">
-          <div class="d-flex justify-content-between w-100">
+          <div class="d-flex flex-wrap justify-content-between w-100">
            <div class="mlscn-custom__input">
                 <span class="mlscn__show d-none d-sm-block">Show</span> 
                 <i class="fas fa-sort-up text-white"></i>
