--- a/mlscn-training-institution.html
+++ b/mlscn-training-institution.html
@@ -103,7 +103,7 @@
     <!-- MLSCN APPROVED TRAINING INSTITUTION -->
     <nav class="navbar mt-1 mlscn-intern-navbar__bg">
       <div class="container">
-          <div class="d-flex justify-content-between w-100">
+          <div class="d-flex flex-wrap justify-content-between w-100">
            <div class="mlscn-custom__input">
                 <span class="mlscn__show d-none d-sm-block">Show</span> 
                 <i class="fas fa-sort-up text-white"></i>
@@ -124,7 +124,7 @@
    <div class="container">
     <div class="d-flex flex-column justify-content-center align-items-center" style="margin-top: 32px;">
        <!-- FEDERAL UNIVERSITIES TABLE -->
-       <div class="table-responsive">
+       <div class="table-responsive" style="max-width: 100%;">
         <table class="table  mlscn-trainingInstitution__table-stripe  text-center">
           <thead>
               <tr class="mlscn-trainingInstitution__tr">
@@ -139,7 +139,7 @@
           <tbody>
             <tr class="">
               <td>1</td>
-              <td>DATE OF NEXT ACCREDITATION VISIT</td>
+              <td>College of Health Tech. Aba</td>
                 <td>Abia</td>
                 <td>Full</td>
                 <td>MLT-50</td>
